force-app/main/default/objects/QI_Inspection__c/QI_Inspection__c.object-meta.xml
<CustomObject>
    <label>QI Inspection</label>
    <nameField>
        <displayFormat>QI-{0000}</displayFormat>
        <label>QI Inspection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QI Inspections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>QI Inspections</relationshipLabel>
        <relationshipName>QI_Inspections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FM__c</fullName>
        <label>Field Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>QI Inspections (FM)</relationshipLabel>
        <relationshipName>QI_Inspections_FM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <label>Overall Score (0-10)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Score_100__c</fullName>
        <formula>Overall_Score__c * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Score (0-100)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value><fullName>Scheduled</fullName><default>true</default><label>Scheduled</label></value>
                <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
                <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
                <value><fullName>FM QI Review (Red Hold)</fullName><default>false</default><label>FM QI Review (Red Hold)</label></value>
                <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overall_Notes__c</fullName>
        <label>Overall Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score_Flag__c</fullName>
        <formula>Overall_Score__c &lt; 5</formula>
        <label>Score Flag (Below 5.0)</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>