force-app/main/default/objects/QI_Inspection__c/fields/Aqua_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aqua Applicable</label>
    <type>Checkbox</type>
</CustomField>