force-app/main/default/objects/QI_Inspection__c/fields/FM__c.field-meta.xml
<CustomField>
    <fullName>FM__c</fullName>
    <label>Field Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>QI Inspections</relationshipLabel>
    <relationshipName>QI_Inspections_FM</relationshipName>
    <type>Lookup</type>
</CustomField>