force-app/main/default/objects/QI_Inspection__c/fields/FM_Notes__c.field-meta.xml
<CustomField>
    <fullName>FM_Notes__c</fullName>
    <label>FM Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>