force-app/main/default/objects/QI_Inspection__c/fields/Red_Flag_Items__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag_Items__c</fullName>
    <label>Red Flag Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>