force-app/main/default/objects/QI_Inspection__c/fields/Score_Aqua__c.field-meta.xml
<CustomField>
    <fullName>Score_Aqua__c</fullName>
    <label>Score Aqua</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>