force-app/main/default/objects/QI_Inspection__c/fields/Score_Cleanup__c.field-meta.xml
<CustomField>
    <fullName>Score_Cleanup__c</fullName>
    <label>Score Cleanup</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>