force-app/main/default/objects/QI_Inspection__c/fields/Score_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Score_Outcome__c</fullName>
    <label>Score Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
                <default>true</default>
                <label>Acceptable</label>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>