force-app/main/default/objects/QI_Inspection__c/fields/Score_Overall__c.field-meta.xml
<CustomField>
    <fullName>Score_Overall__c</fullName>
    <label>Score Overall</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>