force-app/main/default/objects/QI_Inspection__c/fields/Score_Plant_Health__c.field-meta.xml
<CustomField>
    <fullName>Score_Plant_Health__c</fullName>
    <label>Score Plant Health</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>