force-app/main/default/objects/QI_Inspection__c/fields/Score_Site_Condition__c.field-meta.xml
<CustomField>
    <fullName>Score_Site_Condition__c</fullName>
    <label>Score Site Condition</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>