force-app/main/default/objects/QI_Inspection__c/fields/Score_Sod_Health__c.field-meta.xml
<CustomField>
    <fullName>Score_Sod_Health__c</fullName>
    <label>Score Sod Health</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>