force-app/main/default/objects/QI_Inspection__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Scheduled</fullName><default>true</default><label>Scheduled</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Red Hold</fullName><default>false</default><label>Red Hold</label></value>
            <value><fullName>Passed</fullName><default>false</default><label>Passed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>