force-app/main/default/objects/QI_Inspection__c/fields/Tree_Install_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Tree_Install_Applicable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tree Install Applicable</label>
    <type>Checkbox</type>
</CustomField>